complete search handlers
