# internal/pkg/actors/http/handlers.go
@@ -34,13 +34,12 @@ func NewActorsHandler(log *slog.Logger, uc actors.ActorsUsecase) ActorsHandler {
 	}
 }
 
-// TODO Добавить ручку для добавления фильма
 func (ah *ActorsHandler) ServeHTTP(w http.ResponseWriter, r *http.Request) {
 	w.Header().Set("content-type", "application/json")
 	fmt.Println(r.URL.Path)
 	switch {
 	case r.Method == http.MethodGet && allActorsRe.MatchString(r.URL.Path):
-		middleware.RoleCheck(w, r, ah.GetActors, []models.Role{models.Client})
+		middleware.RoleCheck(w, r, ah.GetActors, []models.Role{models.Client, models.Admin})
 		return
 	case r.Method == http.MethodPost && addActorRe.MatchString(r.URL.Path):
 		middleware.RoleCheck(w, r, ah.AddActor, []models.Role{models.Admin})
@@ -62,8 +61,8 @@ func (ah *ActorsHandler) ServeHTTP(w http.ResponseWriter, r *http.Request) {
 // @Tags         Actors
 // @Accept       json
 // @Produce      json
-// @Success      200  {object}  map[string]any
-// @Failure      500  {object}  error
+// @Success      200  {array}  models.Actor
+// @Failure      500
 // @Router       /api/actors [get]
 func (ah *ActorsHandler) GetActors(w http.ResponseWriter, r *http.Request) {
 	actors, err := ah.uc.GetActors(r.Context())
@@ -77,7 +76,15 @@ func (ah *ActorsHandler) GetActors(w http.ResponseWriter, r *http.Request) {
 	resp.JSON(w, http.StatusOK, actors)
 }
 
-// TODO:добавить обработку пустых полей
+// AddActor godoc
+// @Summary      Add a new actor
+// @Description  Add a new actor with name, surname, gender and birthdate
+// @Tags         Actors
+// @Accept       json
+// @Success      200
+// @Failure      400
+// @Failure      500
+// @Router       /api/actors [post]
 func (ah *ActorsHandler) AddActor(w http.ResponseWriter, r *http.Request) {
 	fmt.Println("add actor")
 	body, err := io.ReadAll(r.Body)
@@ -100,6 +107,16 @@ func (ah *ActorsHandler) AddActor(w http.ResponseWriter, r *http.Request) {
 	resp.JSONStatus(w, http.StatusOK)
 }
 
+// UpdateActor godoc
+// @Summary      Update modeling by ID
+// @Description  Updates an actor with the given ID
+// @Tags         Actors
+// @Accept       json
+// @Param        id  path  int  true  "Actor ID"
+// @Success      200
+// @Failure      400
+// @Failure      500
+// @Router       /api/actors/{id} [put]
 func (ah *ActorsHandler) UpdateActor(w http.ResponseWriter, r *http.Request) {
 	fmt.Println("update actors")
 	idStr := filepath.Base(r.URL.Path)
@@ -131,6 +148,16 @@ func (ah *ActorsHandler) UpdateActor(w http.ResponseWriter, r *http.Request) {
 	resp.JSONStatus(w, http.StatusOK)
 }
 
+// DeleteActor godoc
+// @Summary      Delete actor by ID
+// @Description  Deletes an actor with the given ID
+// @Tags         Actors
+// @Accept       json
+// @Param        id  path  int  true  "Actor ID"
+// @Success      200
+// @Failure      400
+// @Failure      500
+// @Router       /api/actors/{id} [delete]
 func (ah *ActorsHandler) DeleteActor(w http.ResponseWriter, r *http.Request) {
 	fmt.Println("delete actors")
 	idStr := filepath.Base(r.URL.Path)
